Add: pug / sass
- 기본적인 pug와 sass를 추가함
- reset.sass를 추가하여 기본폰트사이즈/폰트종류/보더박스 등을 설정

--- a/views/error.pug
+++ b/views/error.pug
@@ -1,6 +1,12 @@
-extends layout
-
-block content
-  h1= message
-  h2= error.status
-  pre #{error.stack}
+doctype html
+html
+  head
+    meta(charset='UTF-8')
+    meta(name="description" content="Amazon Carousel")
+    meta(name="author" content="KKambi")
+    title= title
+    link(rel='stylesheet', href='/stylesheets/reset.sass')
+  body
+    h1= message
+    h2= error.status
+    pre #{error.stack}
