Add: Mini-carousel only left arrow
- 왼쪽으로만 무한이동가능한 미니-캐로셀 구현
- 버튼을 연속해서 클릭시 이벤트 중복을 적절히 처리하지 못하는 디바운싱
이슈 발생

--- a/views/index.pug
+++ b/views/index.pug
@@ -11,9 +11,9 @@ html
     div.mini-carousel-container
       div.mini-carousel-scroller
         div.mini-carousel-col.mini-carousel-left 
-          button.mini-carousel-arrow
+          button.mini-carousel-arrow#left-arrow
         div.mini-carousel-viewport
-          ol.mini-carousel-row
+          ol.mini-carousel-row(style=`transform: translateX(-${carousel_row_width}px)`)
             li.mini-carousel-card
               a.img-link
                 img(src="/images/Sub_Card_A/Sub_Card_A01.jpg" alt="Homecoming New Series")
@@ -27,7 +27,7 @@ html
               a.img-link
                 img(src="/images/Sub_Card_A/Sub_Card_A04.jpg" alt="Tom Clansy's Jack Lyan")
         div.mini-carousel-col.mini-carousel-right
-          button.mini-carousel-arrow
+          button.mini-carousel-arrow#right-arrow
       div.benefit
         h2.benefit-header
         div.benefit-blurb
