Add: benefit text
- 프라임의 benefit 설명 추가
- video-beneift-containter의 오른쪽 flexbox에 3개의 div로 구성

--- a/public/stylesheets/reset.sass
+++ b/public/stylesheets/reset.sass
@@ -52,3 +52,12 @@ table
 	border-collapse: collapse
 	border-spacing: 0
 
+/* Header tag default size by KKambi */
+h1 
+  font-size: 4.5em
+
+h2 
+  font-size: 3.5em
+
+h3 
+  font-size: 2.5em
