--- a/views/index.pug
+++ b/views/index.pug
@@ -7,29 +7,35 @@ html
     meta(name="author" content="KKambi")
     title= title
   body
-    p Welcome to #{title}
-    div.mini-carousel-container
+    div#video-benefit-container
       div.mini-carousel-scroller
-        div.mini-carousel-col.mini-carousel-left 
-          button.mini-carousel-arrow#left-arrow
-        div.mini-carousel-viewport
-          ol.mini-carousel-row(style=`transform: translateX(-${carousel_row_width}px)`)
-            li.mini-carousel-card
-              a.img-link
-                img(src="/images/Sub_Card_A/Sub_Card_A01.jpg" alt="Homecoming New Series")
-            li.mini-carousel-card
-              a.img-link
-                img(src="/images/Sub_Card_A/Sub_Card_A02.jpg" alt="The Man in the High Castle")
-            li.mini-carousel-card
-              a.img-link
-                img(src="/images/Sub_Card_A/Sub_Card_A03.jpg" alt="The Marvelous Mrs.Meisel")
-            li.mini-carousel-card
-              a.img-link
-                img(src="/images/Sub_Card_A/Sub_Card_A04.jpg" alt="Tom Clansy's Jack Lyan")
-        div.mini-carousel-col.mini-carousel-right
-          button.mini-carousel-arrow#right-arrow
+        div.mini-carousel-container
+          div.mini-carousel-col.mini-carousel-left 
+            a.mini-carousel-arrow#left-arrow
+          div.mini-carousel-col.mini-carousel-center
+            div.mini-carousel-viewport
+              ol.mini-carousel-row(style=`transform: translateX(-${carousel_row_width}px)`)
+                li.mini-carousel-card
+                  a.img-link
+                    img(src="/images/Sub_Card_A/Sub_Card_A01.jpg" alt="Homecoming New Series")
+                li.mini-carousel-card
+                  a.img-link
+                    img(src="/images/Sub_Card_A/Sub_Card_A02.jpg" alt="The Man in the High Castle")
+                li.mini-carousel-card
+                  a.img-link
+                    img(src="/images/Sub_Card_A/Sub_Card_A03.jpg" alt="The Marvelous Mrs.Meisel")
+                li.mini-carousel-card
+                  a.img-link
+                    img(src="/images/Sub_Card_A/Sub_Card_A04.jpg" alt="Tom Clansy's Jack Lyan")
+          div.mini-carousel-col.mini-carousel-right
+            a.mini-carousel-arrow#right-arrow
       div.benefit
-        h2.benefit-header
+        div.benefit-header
+          | Amazon Originals, <br>exclusively on Prime Video
         div.benefit-blurb
+          | Prime Video is the only place 
+          | where you can watch Amazon Original series 
+          | like "The Marvelous Mrs. Maisel", "Tom Clancy's Jack Ryan", "Homecoming", and "The Man in the High Castle".
         div.benefit-cta
-    script(src="/dist/index.bundle.js")
+          | Explore Prime Video
+    script(src="/dist/mini_carousel.bundle.js")
