--- a/public/stylesheets/mini_carousel.sass
+++ b/public/stylesheets/mini_carousel.sass
@@ -25,11 +25,11 @@ $content-line-height: 1.5
     width: 50%
 
 .mini-carousel-container
-    height: 100%
     display: flex
     flex-direction: row
     justify-content: center
     margin-left: 100px
+    padding-top: 20px
 
 .mini-carousel-col
     display: flex
@@ -53,6 +53,29 @@ $content-line-height: 1.5
 .mini-carousel-center
     padding-left: 20px
     padding-right: 20px
+    position: relative
+
+.mini-carousel-center::before
+    z-index: -1
+    width: 10px
+    height: 100px
+    content: ""
+    box-shadow: 0 -15px 25px 7px #222
+    position: absolute
+    transform: rotate(-8deg)
+    top: 30px
+    left: 30px
+
+.mini-carousel-center::after
+    z-index: -1
+    width: 10px
+    height: 100px
+    content: ""
+    box-shadow: 0 -15px 25px 7px #222
+    position: absolute
+    transform: rotate(8deg)
+    top: 30px
+    right: 30px
 
 .mini-carousel-right
     align-items: flex-end
@@ -61,12 +84,7 @@ $content-line-height: 1.5
     width: $carousel-card-width
     height: $carousel-card-height
     overflow: hidden
-
-.mini-carousel-viewport::before
-    width: 100px
-    height: 100px
-    content: ""
-    box-shadow: 0 -15px 25px 7px #aaaaaa11
+    position: relative
 
 .mini-carousel-row
     width: $carousel-row-width
