Update: mini-carousel with auto sliding
- 자동으로 3초마다 정방향으로 슬라이딩
- 화살표 버튼 클릭 시 슬라이딩 이벤트는 사라진다

--- a/public/stylesheets/mini_carousel.sass
+++ b/public/stylesheets/mini_carousel.sass
@@ -110,8 +110,11 @@ a.img-link
         line-height: $title-line-height
     div.benefit-blurb
         font-size: $content-font-size
-    div.benefit-cta
+    a.benefit-cta
         font-size: $content-font-size
+        font-weight: 600
+        cursor: pointer
+    a.benefit-cta:hover
         text-decoration: underline
 
 
