--- a/public/stylesheets/reset.sass
+++ b/public/stylesheets/reset.sass
@@ -54,10 +54,15 @@ table
 
 /* Header tag default size by KKambi */
 h1 
-  font-size: 4.5em
+	font-size: 4.5em
 
 h2 
-  font-size: 3.5em
+	font-size: 3.5em
 
 h3 
-  font-size: 2.5em
+	font-size: 2.5em
+
+/* a none tag */
+a, a:link, a:hover, a:active, a:visited
+	color: #000000
+	text-decoration: none
