--- a/views/index.pug
+++ b/views/index.pug
@@ -36,6 +36,6 @@ html
           | Prime Video is the only place 
           | where you can watch Amazon Original series 
           | like "The Marvelous Mrs. Maisel", "Tom Clancy's Jack Ryan", "Homecoming", and "The Man in the High Castle".
-        div.benefit-cta
+        a.benefit-cta(href="https://www.amazon.com/gp/video/storefront/ref=dvm_us_aq_np_dhb_be_optorigt1?ie=UTF8&merchId=originals1")
           | Explore Prime Video
     script(src="/dist/mini_carousel.bundle.js")
