--- a/public/stylesheets/reset.sass
+++ b/public/stylesheets/reset.sass
@@ -1,5 +1,5 @@
 // Google Fonts - Noto Sans
-@import url('https://fonts.googleapis.com/css?family=Noto+Sans&display=swap')
+@import url('https://fonts.googleapis.com/css?family=Noto+Sans:400,700&display=block')
 $noto-sans: 'Noto Sans', sans-serif
 
 html, body, div, span, applet, object, iframe,
