Fix: mini-carousel normally works
- 정상적으로 작동하도록 오류 수정

--- a/public/stylesheets/reset.sass
+++ b/public/stylesheets/reset.sass
@@ -38,7 +38,8 @@ footer, header, hgroup, menu, nav, section
 	display: block
 
 ol, ul 
-	list-style: none
+    list-style: none
+    font-size: 0
 
 blockquote, q 
 	quotes: none
