Update: mini-carousel-component to modify card size
- 컴포넌트 사용자가 이미지 크기에 맞게 컴포넌트를 사용할 수 있도록 변경
- 미니카로셀 생성자에 값을 넣으면 된다.

--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -17,4 +17,4 @@ html
           | like "The Marvelous Mrs. Maisel", "Tom Clancy's Jack Ryan", "Homecoming", and "The Man in the High Castle".
         a.benefit-cta(href="https://www.amazon.com/gp/video/storefront/ref=dvm_us_aq_np_dhb_be_optorigt1?ie=UTF8&merchId=originals1")
           | Explore Prime Video
-    script(src="/dist/mini_carousel.bundle.js")
+    script(src="/dist/index.bundle.js")
