--- a/public/stylesheets/mini_carousel.sass
+++ b/public/stylesheets/mini_carousel.sass
@@ -23,7 +23,7 @@ $mini-arrow-background-size: 158px auto
     display: flex
     flex-direction: row
     justify-content: center
-    margin-left: 100px
+    padding-left: 100px
     padding-top: 20px
 
 .mini-carousel-col
