Add: new mini carousel with component
- 만들었던 mini-carousel component를 활용하여 music-carousel 생성
- 간격을 위해 최상위 container 클래스에 margin-bottom추가

--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -7,5 +7,7 @@ html
     meta(name="author" content="KKambi")
     title= title
   body
-    div#video-benefit-container
+    div#main-beneift-container.container
+    div#video-benefit-container.container
+    div#music-benefit-container.container
     script(src="/dist/index.bundle.js")
