Add: shadow options to mini-carousel component
- 생성 시 option 객체를 전달해서 박스 그림자를 없애는 기능 추가
- 향후 option 객체에 많은 항목을 추가구현할 수 있을 듯

--- a/public/stylesheets/mini_carousel.sass
+++ b/public/stylesheets/mini_carousel.sass
@@ -40,6 +40,10 @@ $mini-arrow-background-size: 158px auto
     padding-left: 20px
     padding-right: 20px
     position: relative
+    &.no-before::before
+        display: none
+    &.no-after::after
+        display: none
 
 .mini-carousel-center::before
     z-index: -1
@@ -73,6 +77,5 @@ $mini-arrow-background-size: 158px auto
 .mini-carousel-row
     height: 100%
     .mini-carousel-card
-        width: 25%
         height: 100%
         display: inline-block
