--- a/public/stylesheets/benefit_card.sass
+++ b/public/stylesheets/benefit_card.sass
@@ -6,6 +6,7 @@ $content-line-height: 1.5
 .benefit
     width: 50%
     height: 100%
+    font-size: 10px
     h2, div
         margin-bottom: 20px
         line-height: $content-line-height
