--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -7,6 +7,7 @@ html
     meta(name="author" content="KKambi")
     title= title
   body
+    div#main-card-continaer.container
     div#main-beneift-container.container
     div#video-benefit-container.container
     div#music-benefit-container.container
