--- a/public/stylesheets/main_card.sass
+++ b/public/stylesheets/main_card.sass
@@ -3,3 +3,23 @@
 
     .main-card
         margin: 0 1rem 0 1rem
+        display: flex
+        flex-direction: column
+        justify-content: flex-end
+        align-items: center
+
+.main-card-button-row
+    margin: 1rem 0 1rem 0
+
+    .main-card-button
+        margin: 0 0.1rem 0 0.1rem
+        width: 1rem
+        height: 1rem
+        border: 0
+        border-radius: 1rem
+        cursor: pointer
+        opacity: 0.5
+    
+    .main-card-button:hover, .main-card-button:active
+        background-color: white
+        opacity: 1
