Fix: foldering error
- 모듈 의존성 오류로 인해 페이지가 정상적이지 않던 현상 수정

--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -11,4 +11,4 @@ html
     div#main-beneift-container.container
     div#video-benefit-container.container
     div#music-benefit-container.container
-    script(src="/dist/index.bundle.js")
+    script(src="/javascripts/index.bundle.js")
