Add: authentication with passport.js
- 패스포트 라이브러리를 활용한 로그인 및 세션 저장 가능
- 현재 정상적으로 세션을 저장하고, 세션을 읽어오는 것으로 보임
- 이를 활용하여 어떻게 동적으로 view에 그려낼 것인지가 문제

--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -7,6 +7,14 @@ html
     meta(name="author" content="KKambi")
     title= title
   body
+    div#header
+        div
+                | #{user_id}님 환영합니다
+                | 이름이 #{name}야?
+        div#sign-container
+            a(href="./sessions/new") 로그인
+            a(onclick="document.querySelector('#login-form').submit();") 로그아웃
+            form#login-form(action="/sessions/destroy" method="POST" style="display:none;")
     div#main-card-continaer.container
     div#main-beneift-container.container
     div#video-benefit-container.container
