Fix: login page css error
- 로그인 페이지의 css->sass 변환이 잘못 이루어진 문제 수정

--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -9,8 +9,9 @@ html
   body
     div#header
         div
-                | #{user_id}님 환영합니다
-                | 이름이 #{name}야?
+            if signed
+                | #{name}님 환영합니다
+                | (#{user_id})
         div#sign-container
             a(href="./sessions/new") 로그인
             a(onclick="document.querySelector('#login-form').submit();") 로그아웃
