--- a/src/stylesheets/reset.sass
+++ b/src/stylesheets/reset.sass
@@ -31,6 +31,7 @@ body
 	font-weight: normal
 	font-size: 10px
 	line-height: 1
+	padding-top: 6em
 
 /* HTML5 display-role reset for older browsers */
 article, aside, details, figcaption, figure, 
