--- a/src/views/login.pug
+++ b/src/views/login.pug
@@ -6,7 +6,7 @@ head
 #wrapper
   header
     #title
-      | KKambi
+      | Amazon
   #container
     #content
       form#login(action='./create' name='login' autocomplete='off' method='POST')
