Update: rem size & stylesheets in navbar
- rem size를 변경 (16px -> 10px)
- 이에 맞춰 navBar sass 수정

--- a/src/views/login.pug
+++ b/src/views/login.pug
@@ -15,7 +15,7 @@ head
         .input-group.mb-3
           input.form-control(type='password' name='password' placeholder='비밀번호' aria-label='Password' maxlength='16')
         #button-area.input-row
-          button#login-button.primary-button.btn.btn-success(aria-label='Login')
+          button#login-button.primary-button.btn.btn-secondary(aria-label='Login')
             | 로그인
           if valid === 'false'
             span#login-message.message.fail
