--- a/src/stylesheets/admin.sass
+++ b/src/stylesheets/admin.sass
@@ -25,7 +25,7 @@
         justify-content: center
 
         div
-            margin: 0 1rem 0 1rem
+            margin: 0 0 0 2rem
 
     .content-body
         height: 100%
