Fix: babel error about async/await
- async/await를 babel-loader가 제대로 변환하지 못하는 문제
- 호환성 문제가 현재 중요점이 아니기 때문에, 바벨을 적용하지 않는 것으로
수정

--- a/src/views/admin.pug
+++ b/src/views/admin.pug
@@ -22,7 +22,7 @@ html
                     a.nav-item-link.link(data-link-type="item")
                         | 아이템
                 div.nav-index-button
-                    a.nav-index-link(href="/")
+                    a.nav-index-link.link(href="/")
                         | 돌아가기
     div#content-container
 
