--- a/src/stylesheets/admin.sass
+++ b/src/stylesheets/admin.sass
@@ -26,6 +26,11 @@
 
         div
             margin: 0 0 0 2rem
+        
+        a, a:link, a:hover, a:active, a:visited
+            margin-right: 1rem
+            color: #000000
+            font-weight: normal
 
     .content-body
         height: 100%
